--- a/source/catalog.html
+++ b/source/catalog.html
@@ -4,227 +4,221 @@
     <meta charset="utf-8">
     <title>HTML Academy: Кэт энерджи | Каталог</title>
   </head>
-  <body>
-    <header class="page-header">
-      <div class="wrapper">
-        <div class="page-header__content">
-          <a href="index.html" class="page-logo page-header__logo">
-            <img src="https://via.placeholder.com/150x150" width="32" height="38" class="page-header__logo-image" alt="logotype">
-          </a>
-          <span class="page-title page-header__title">
-            <b>Cat</b> Energy
-          </span>
-          <nav class="main-nav">
-            <button class="main-nav__toggle" type="button">| | |</button>
-            <ul class="main-nav__list visually-hidden">
-              <li class="main-nav__item">
-                <a href="index.html">Главная</a>
-              </li>
-              <li class="main-nav__item">
-                <a>Каталог</a>
-              </li>
-              <li class="main-nav__item">
-                <a href="form.html">Форма</a>
-              </li>
-            </ul>
-          </nav>
-        </div>
+  <body class="page">
+    <header class="page-header header">
+      <div class="page-header__content">
+        <a class="page-logo page-header__logo">
+          <img src="https://via.placeholder.com/150x150" width="32" height="38" class="page-header__logo-image" alt="logotype">
+        </a>
+        <span class="page-title page-title__header">
+          <b>Cat</b> Energy
+        </span>
+        <nav class="main-nav">
+          <button class="main-nav__toggle" type="button">| | |</button>
+          <ul class="main-nav__list visually-hidden">
+            <li class="main-nav__item">
+              <a href="index.html">Главная</a>
+            </li>
+            <li class="main-nav__item">
+              <a class="main-nav__link">Каталог</a>
+            </li>
+            <li class="main-nav__item">
+              <a href="form.html" class="main-nav__link">Форма</a>
+            </li>
+          </ul>
+        </nav>
       </div>
     </header>
 
     <main class="page-main">
       <section class="catalog">
-        <div class="wrapper">
-          <div class="catalog__content">
-            <h2>Каталог продукции</h2>
-            <ul class="catalog__list">
-              <li class="catalog-item catalog-item-1">
-                <img src="https://via.placeholder.com/150x150" alt="Item-1" class="catalog-item__image" width="140" height="144" >
-                <span class="catalog-item__title">
-                    Cat Energy <br> PRO 500 г
-                </span>
-                <table class="catalog-item__list">
-                  <tr>
-                    <td class="catalog-item__option">Объем</td>
-                    <td class="catalog-item__value">500 г</td>
-                  </tr>
-                  <tr>
-                    <td class="catalog-item__option">Вкус</td>
-                    <td class="catalog-item__value">Курица</td>
-                  </tr>
-                  <tr>
-                    <td class="catalog-item__option">Цена</td>
-                    <td class="catalog-item__value">700 Р</td>
-                  </tr>
-                </table>
-                <button class="button catalog-item__button">Заказать</button>
-              </li>
-              <li class="catalog-item catalog-item-2">
-                <img src="https://via.placeholder.com/150x150" alt="Item-2" class="catalog-item__image" width="140" height="144" >
-                <span class="catalog-item__title">
-                    Cat Energy <br> PRO 1000 г
-                </span>
-                <table class="catalog-item__list">
-                  <tr>
-                    <td class="catalog-item__option">Объем</td>
-                    <td class="catalog-item__value">1000 г</td>
-                  </tr>
-                  <tr>
-                    <td class="catalog-item__option">Вкус</td>
-                    <td class="catalog-item__value">Курица</td>
-                  </tr>
-                  <tr>
-                    <td class="catalog-item__option">Цена</td>
-                    <td class="catalog-item__value">1000 Р</td>
-                  </tr>
-                </table>
-                <button class="button catalog-item__button">Заказать</button>
-              </li>
-              <li class="catalog-item catalog-item-3">
-                <img src="https://via.placeholder.com/150x150" alt="Item-3" class="catalog-item__image" width="140" height="144" >
-                <span class="catalog-item__title">
-                    Cat Energy <br> PRO 500 г
-                </span>
-                <table class="catalog-item__list">
-                  <tr>
-                    <td class="catalog-item__option">Объем</td>
-                    <td class="catalog-item__value">500 г</td>
-                  </tr>
-                  <tr>
-                    <td class="catalog-item__option">Вкус</td>
-                    <td class="catalog-item__value">Рыба</td>
-                  </tr>
-                  <tr>
-                    <td class="catalog-item__option">Цена</td>
-                    <td class="catalog-item__value">700 Р</td>
-                  </tr>
-                </table>
-                <button class="button catalog-item__button">Заказать</button>
-              </li>
-              <li class="catalog-item catalog-item-4">
-                <img src="https://via.placeholder.com/150x150" alt="Item-4" class="catalog-item__image" width="140" height="144" >
-                <span class="catalog-item__title">
-                    Cat Energy <br> PRO 1000 г
-                </span>
-                <table class="catalog-item__list">
-                  <tr>
-                    <td class="catalog-item__option">Объем</td>
-                    <td class="catalog-item__value">1000 г</td>
-                  </tr>
-                  <tr>
-                    <td class="catalog-item__option">Вкус</td>
-                    <td class="catalog-item__value">Курица</td>
-                  </tr>
-                  <tr>
-                    <td class="catalog-item__option">Цена</td>
-                    <td class="catalog-item__value">1000 Р</td>
-                  </tr>
-                </table>
-                <button class="button catalog-item__button">Заказать</button>
-              </li>
-              <li class="catalog-item catalog-item-5">
-                <img src="https://via.placeholder.com/150x150" alt="Item-5" class="catalog-item__image" width="140" height="144" >
-                <span class="catalog-item__title">
-                    Cat Energy <br> Slim 1000 г
-                </span>
-                <table class="catalog-item__list">
-                  <tr>
-                    <td class="catalog-item__option">Объем</td>
-                    <td class="catalog-item__value">500 г</td>
-                  </tr>
-                  <tr>
-                    <td class="catalog-item__option">Вкус</td>
-                    <td class="catalog-item__value">Гречка</td>
-                  </tr>
-                  <tr>
-                    <td class="catalog-item__option">Цена</td>
-                    <td class="catalog-item__value">400 Р</td>
-                  </tr>
-                </table>
-                <button class="button catalog-item__button">Заказать</button>
-              </li>
-              <li class="catalog-item catalog-item-6">
-                <img src="https://via.placeholder.com/150x150" alt="Item-6" class="catalog-item__image" width="140" height="144" >
-                <span class="catalog-item__title catalog-item__title-bold">
-                    Cat Energy <br> Slim 1000 г
-                </span>
-                <table class="catalog-item__list">
-                  <tr>
-                    <td class="catalog-item__option">Объем</td>
-                    <td class="catalog-item__value">1000 г</td>
-                  </tr>
-                  <tr>
-                    <td class="catalog-item__option">Вкус</td>
-                    <td class="catalog-item__value">Гречка</td>
-                  </tr>
-                  <tr>
-                    <td class="catalog-item__option">Цена</td>
-                    <td class="catalog-item__value">700 Р</td>
-                  </tr>
-                </table>
-                <button class="button catalog-item__button">Заказать</button>
-              </li>
-              <li class="catalog-item catalog-item-7">
-                <img src="https://via.placeholder.com/150x150" alt="Item-3" class="catalog-item__image" width="140" height="144">
-                <span class="catalog-item__title catalog-item__title-bold">
-                    Cat Energy <br> Slim 500 г
-                </span>
-                <table class="catalog-item__list">
-                  <tr>
-                    <td class="catalog-item__option">Объем</td>
-                    <td class="catalog-item__value">500 г</td>
-                  </tr>
-                  <tr>
-                    <td class="catalog-item__option">Вкус</td>
-                    <td class="catalog-item__value">Рис</td>
-                  </tr>
-                  <tr>
-                    <td class="catalog-item__option">Цена</td>
-                    <td class="catalog-item__value">500 Р</td>
-                  </tr>
-                </table>
-                <button class="button catalog-item__button">Заказать</button>
-              </li>
-            </ul>
-            <div class="show-more">
-              <img src="https://via.placeholder.com/150x150" alt="Shiw more" class="show-more__image" width="30" height="30">
-              <div class="show-more__title">Показать еще 100500 товаров</div>
-              <div class="show-more__description">На самом деле вкусов гораздо больше!</div>
-              <button class="button button-grey show-more__button">Показать все</button>
-            </div>
+        <div class="catalog__content">
+          <h1>Каталог продукции</h1>
+          <ul class="catalog__list">
+            <li class="catalog__item">
+              <img src="https://via.placeholder.com/150x150" alt="Item-1" class="catalog__image" width="140" height="144" >
+              <span class="catalog__title">
+                  Cat Energy <br> PRO 500 г
+              </span>
+              <table class="catalog__list">
+                <tr>
+                  <td class="catalog__option">Объем</td>
+                  <td class="catalog__value">500 г</td>
+                </tr>
+                <tr>
+                  <td class="catalog__option">Вкус</td>
+                  <td class="catalog__value">Курица</td>
+                </tr>
+                <tr>
+                  <td class="catalog__option">Цена</td>
+                  <td class="catalog__value">700 Р</td>
+                </tr>
+              </table>
+              <button class="button catalog__button" type="button">Заказать</button>
+            </li>
+            <li class="catalog__item">
+              <img src="https://via.placeholder.com/150x150" alt="Item-2" class="catalog__image" width="140" height="144" >
+              <span class="catalog__title">
+                  Cat Energy <br> PRO 1000 г
+              </span>
+              <table class="catalog__list">
+                <tr>
+                  <td class="catalog__option">Объем</td>
+                  <td class="catalog__value">1000 г</td>
+                </tr>
+                <tr>
+                  <td class="catalog__option">Вкус</td>
+                  <td class="catalog__value">Курица</td>
+                </tr>
+                <tr>
+                  <td class="catalog__option">Цена</td>
+                  <td class="catalog__value">1000 Р</td>
+                </tr>
+              </table>
+              <button class="button catalog__button" type="button">Заказать</button>
+            </li>
+            <li class="catalog__item">
+              <img src="https://via.placeholder.com/150x150" alt="Item-3" class="catalog__image" width="140" height="144" >
+              <span class="catalog__title">
+                  Cat Energy <br> PRO 500 г
+              </span>
+              <table class="catalog__list">
+                <tr>
+                  <td class="catalog__option">Объем</td>
+                  <td class="catalog__value">500 г</td>
+                </tr>
+                <tr>
+                  <td class="catalog__option">Вкус</td>
+                  <td class="catalog__value">Рыба</td>
+                </tr>
+                <tr>
+                  <td class="catalog__option">Цена</td>
+                  <td class="catalog__value">700 Р</td>
+                </tr>
+              </table>
+              <button class="button catalog__button" type="button">Заказать</button>
+            </li>
+            <li class="catalog__item">
+              <img src="https://via.placeholder.com/150x150" alt="Item-4" class="catalog__image" width="140" height="144" >
+              <span class="catalog__title">
+                  Cat Energy <br> PRO 1000 г
+              </span>
+              <table class="catalog__list">
+                <tr>
+                  <td class="catalog__option">Объем</td>
+                  <td class="catalog__value">1000 г</td>
+                </tr>
+                <tr>
+                  <td class="catalog__option">Вкус</td>
+                  <td class="catalog__value">Курица</td>
+                </tr>
+                <tr>
+                  <td class="catalog__option">Цена</td>
+                  <td class="catalog__value">1000 Р</td>
+                </tr>
+              </table>
+              <button class="button catalog__button" type="button">Заказать</button>
+            </li>
+            <li class="catalog__item">
+              <img src="https://via.placeholder.com/150x150" alt="Item-5" class="catalog__image" width="140" height="144" >
+              <span class="catalog__title">
+                  Cat Energy <br> Slim 1000 г
+              </span>
+              <table class="catalog__list">
+                <tr>
+                  <td class="catalog__option">Объем</td>
+                  <td class="catalog__value">500 г</td>
+                </tr>
+                <tr>
+                  <td class="catalog__option">Вкус</td>
+                  <td class="catalog__value">Гречка</td>
+                </tr>
+                <tr>
+                  <td class="catalog__option">Цена</td>
+                  <td class="catalog__value">400 Р</td>
+                </tr>
+              </table>
+              <button class="button catalog__button" type="button">Заказать</button>
+            </li>
+            <li class="catalog__item">
+              <img src="https://via.placeholder.com/150x150" alt="Item-6" class="catalog__image" width="140" height="144" >
+              <span class="catalog__title">
+                  Cat Energy <br> Slim 1000 г
+              </span>
+              <table class="catalog__list">
+                <tr>
+                  <td class="catalog__option">Объем</td>
+                  <td class="catalog__value">1000 г</td>
+                </tr>
+                <tr>
+                  <td class="catalog__option">Вкус</td>
+                  <td class="catalog__value">Гречка</td>
+                </tr>
+                <tr>
+                  <td class="catalog__option">Цена</td>
+                  <td class="catalog__value">700 Р</td>
+                </tr>
+              </table>
+              <button class="button catalog__button" type="button">Заказать</button>
+            </li>
+            <li class="catalog__item">
+              <img src="https://via.placeholder.com/150x150" alt="Item-3" class="catalog__image" width="140" height="144">
+              <span class="catalog__title">
+                  Cat Energy <br> Slim 500 г
+              </span>
+              <table class="catalog__list">
+                <tr>
+                  <td class="catalog__option">Объем</td>
+                  <td class="catalog__value">500 г</td>
+                </tr>
+                <tr>
+                  <td class="catalog__option">Вкус</td>
+                  <td class="catalog__value">Рис</td>
+                </tr>
+                <tr>
+                  <td class="catalog__option">Цена</td>
+                  <td class="catalog__value">500 Р</td>
+                </tr>
+              </table>
+              <button class="button catalog__button" type="button">Заказать</button>
+            </li>
+          </ul>
+          <div class="show-more">
+            <img src="https://via.placeholder.com/150x150" alt="Show more" class="show-more__image" width="30" height="30">
+            <span class="show-more__title">Показать еще 100500 товаров</span>
+            <span class="show-more__description">На самом деле вкусов гораздо больше!</span>
+            <button class="button button--grey show-more__button" type="button">Показать все</button>
           </div>
         </div>
       </section>
     </main>
 
-    <footer class="page-footer">
-      <div class="wrapper">
-        <div class="footer__content">
-          <span class="page-title page-footer__title">
-            <b>Cat</b> Energy
-          </span>
-          <ul class="social__list social__list-footer">
-            <li class="social__item social__item-vk">
-              <a href="https://vk.com/htmlacademy">
-                <img src="https://via.placeholder.com/150x150" width="16" height="16" alt="VK">
-              </a>
-            </li>
-            <li class="social__item social__item-insta">
-              <a href="https://www.instagram.com/htmlacademy">
-                <img src="https://via.placeholder.com/150x150" width="16" height="16" alt="Instagram">
-              </a>
-            </li>
-            <li class="social__item social__item-fb">
-              <a href="https://ru-ru.facebook.com/htmlacademy">
-                <img src="https://via.placeholder.com/150x150" width="16" height="16" alt="Facebook">
-              </a>
-            </li>
-          </ul>
-          <div class="copyright">
-            <span class="copyright__text">HTML Academy</span>
-            <img src="https://via.placeholder.com/150x150" class="copyright__image" width="27" height="34" alt="Academy">
-          </div>
-        </div>
+    <footer class="page-footer footer">
+      <div class="footer__content">
+        <span class="page-title page-title__footer">
+          <b>Cat</b> Energy
+        </span>
+        <ul class="social">
+          <li class="social__item">
+            <a href="https://vk.com/htmlacademy" class="social__link">
+              <img src="https://via.placeholder.com/150x150" class="social__image social__image-vk" width="16" height="16" alt="VK">
+            </a>
+          </li>
+          <li class="social__item">
+            <a href="https://www.instagram.com/htmlacademy" class="social__link">
+              <img src="https://via.placeholder.com/150x150" class="social__image social__image-instagram" width="16" height="16" alt="Instagram">
+            </a>
+          </li>
+          <li class="social__item">
+            <a href="https://ru-ru.facebook.com/htmlacademy" class="social__link">
+              <img src="https://via.placeholder.com/150x150" class="social__image social__image-fb" width="16" height="16" alt="Facebook">
+            </a>
+          </li>
+        </ul>
+        <a class="copyright">
+          <span class="copyright__text">HTML Academy</span>
+          <img src="https://via.placeholder.com/150x150" class="copyright__image" width="27" height="34" alt="Academy">
+        </a>
       </div>
     </footer>
   </body>
