--- a/source/form.html
+++ b/source/form.html
@@ -4,62 +4,58 @@
     <meta charset="utf-8">
     <title>HTML Academy: Кэт энерджи | Подбор программы</title>
   </head>
-  <body>
-    <header class="page-header">
-      <div class="wrapper">
-        <div class="page-header__content">
-          <a class="page-logo page-header__logo">
-            <img src="https://via.placeholder.com/150x150" width="32" height="38" class="page-header__logo-image" alt="logotype">
-          </a>
-          <span class="page-title page-header__title">
-            <b>Cat</b> Energy
-          </span>
-          <nav class="main-nav">
-            <button class="main-nav__toggle" type="button">| | |</button>
-            <ul class="main-nav__list visually-hidden">
-              <li class="main-nav__item">
-                <a>Главная</a>
-              </li>
-              <li class="main-nav__item">
-                <a href="catalog.html">Каталог</a>
-              </li>
-              <li class="main-nav__item">
-                <a href="form.html">Форма</a>
-              </li>
-            </ul>
-          </nav>
-        </div>
+  <body class="page">
+    <header class="page-header header">
+      <div class="page-header__content">
+        <a class="page-logo page-header__logo">
+          <img src="https://via.placeholder.com/150x150" width="32" height="38" class="page-header__logo-image" alt="logotype">
+        </a>
+        <span class="page-title page-title__header">
+          <b>Cat</b> Energy
+        </span>
+        <nav class="main-nav">
+          <button class="main-nav__toggle" type="button">| | |</button>
+          <ul class="main-nav__list visually-hidden">
+            <li class="main-nav__item">
+              <a href="index.html">Главная</a>
+            </li>
+            <li class="main-nav__item">
+              <a href="catalog.html" class="main-nav__link">Каталог</a>
+            </li>
+            <li class="main-nav__item">
+              <a class="main-nav__link">Форма</a>
+            </li>
+          </ul>
+        </nav>
       </div>
     </header>
 
-    <footer class="page-footer">
-      <div class="wrapper">
-        <div class="footer__content">
-          <span class="page-title page-footer__title">
-            <b>Cat</b> Energy
-          </span>
-          <ul class="social__list social__list-footer">
-            <li class="social__item social__item-vk">
-              <a href="https://vk.com/htmlacademy">
-                <img src="https://via.placeholder.com/150x150" width="16" height="16" alt="VK">
-              </a>
-            </li>
-            <li class="social__item social__item-insta">
-              <a href="https://www.instagram.com/htmlacademy">
-                <img src="https://via.placeholder.com/150x150" width="16" height="16" alt="Instagram">
-              </a>
-            </li>
-            <li class="social__item social__item-fb">
-              <a href="https://ru-ru.facebook.com/htmlacademy">
-                <img src="https://via.placeholder.com/150x150" width="16" height="16" alt="Facebook">
-              </a>
-            </li>
-          </ul>
-          <div class="copyright">
-            <span class="copyright__text">HTML Academy</span>
-            <img src="https://via.placeholder.com/150x150" class="copyright__image" width="27" height="34" alt="Academy">
-          </div>
-        </div>
+    <footer class="page-footer footer">
+      <div class="footer__content">
+        <span class="page-title page-title__footer">
+          <b>Cat</b> Energy
+        </span>
+        <ul class="social">
+          <li class="social__item">
+            <a href="https://vk.com/htmlacademy" class="social__link">
+              <img src="https://via.placeholder.com/150x150" class="social__image social__image-vk" width="16" height="16" alt="VK">
+            </a>
+          </li>
+          <li class="social__item">
+            <a href="https://www.instagram.com/htmlacademy" class="social__link">
+              <img src="https://via.placeholder.com/150x150" class="social__image social__image-instagram" width="16" height="16" alt="Instagram">
+            </a>
+          </li>
+          <li class="social__item">
+            <a href="https://ru-ru.facebook.com/htmlacademy" class="social__link">
+              <img src="https://via.placeholder.com/150x150" class="social__image social__image-fb" width="16" height="16" alt="Facebook">
+            </a>
+          </li>
+        </ul>
+        <a class="copyright">
+          <span class="copyright__text">HTML Academy</span>
+          <img src="https://via.placeholder.com/150x150" class="copyright__image" width="27" height="34" alt="Academy">
+        </a>
       </div>
     </footer>
   </body>
